--- a/dataConsulta.css
+++ b/dataConsulta.css
@@ -30,7 +30,7 @@
    flex-direction: column;
    background-color: white;
    border: 2px solid black;
-   margin: 40px 30px;
+   margin: 40px 60px;
    
  }
 
@@ -44,47 +44,100 @@
  }
 
  .area_container h2{
-   font-size: 13px;
-   color: #010440;
-   margin: 15px 10px;
- }
-
- .informacoes_data{
-   display: flex;
-   justify-content: space-between;
-   margin: 0 320px ;
-   color: gray;
    font-size: 15px;
+   margin: 25px 50px;
  }
 
- .data_horario {
+ .data_horario{
    display: flex;
-   justify-content: space-between;
-   margin: 0 280px;
+   flex-direction: column;
+   align-items: center;
+ }
+
+ .data_horario h2{
+  margin: 20px 0;
+   font-size: 40px;
+ }
+
+ .data{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 600px;
+   padding: 30px;
+   color: black;
+   background-color: rgba(128, 128, 128, 0.357);
+   border: 3px solid gray;
+   border-radius: 10px;
+   
+ }
+
+ .data input[type="date"]{
+   width: 150px;
+   height: 45px;
+   margin: 25px 0;
+   background-color: gray;
+   color: white;
+   font-size: 20px;
+ }
+
+ .horario{
+   display: flex;
+   flex-direction: column;
+   margin: 20px 30px;
+   width: 600px;
+   padding: 10px;
+   background-color: rgba(128, 128, 128, 0.357);
+   border: 3px solid gray;
+   border-radius: 10px;
+ }
+
+ .horario h2{
+  display: flex;
+  justify-content: center;
+ }
+
+ .horario div p{
+  color: gray;
+  font-size: 14px;
+  font-weight: bold;
+ }
+
+ .Periodo_geral{
+   display: flex;
+   justify-content: space-around;
+ }
+
+ .periodo_matutino{
+   display: flex;
+   flex-direction: column;
+ }
+
+ .input_radio{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px 12px;
+  width: 80px;
+  height: 40px;
+  background-color: gray;
+  color: white;
+  border-radius: 12px;
+  font-weight: bold;
+  border: 1px solid gray;
+ }
+
+ .periodo_vesperino{
+   display: flex;
+   flex-direction: column;
  }
 
  
-.horario{
+ .botao {
    display: flex;
-   gap: 30px;
-}
-
-.periodo_matutino{
-   display: flex;
-   flex-direction: column;
-}
-
-
-.periodo_vesperino{
-   display: flex;
-   flex-direction: column;
-}
-
- .butoes {
-   display: flex;
-   flex-direction: row-reverse;
-   justify-content: space-between;
-   margin: 30px 350px;
+   align-items: center;
+   justify-content: center;
+   margin: 20px 0;
 }
 
  .btn_confirmar{
@@ -104,20 +157,4 @@
    color: #00008B;
 }
 
-#btn_sair {
-   width: 120px;
-   height: 50px;
-   font-size: 20px;
-   border: none;
-   border: 1px solid gray;
-   background-color: white;
-   border-radius: 10px;
-   color: gray;
-   cursor: pointer;
-   transition: 0.5s;
-}
 
-#btn_sair:hover{
-   background-color: gray;
-   color: white;
-}
